# magpie

./: .gitignore  .typos.toml  PRINCIPLES.md  README.md
.claude/skills/: MANIFEST_AUTHORING.md
.claude/skills/contributor-nomination/: manifest.yaml
.claude/skills/issue-fix-workflow/: manifest.yaml
.claude/skills/issue-reassess/: manifest.yaml
.claude/skills/issue-reassess-stats/: manifest.yaml
.claude/skills/issue-reproducer/: manifest.yaml
.claude/skills/issue-triage/: manifest.yaml
.claude/skills/list-steward-skills/: manifest.yaml
.github/workflows/: reconciler-ci.yml  tests.yml
agent/taxonomy/: README.md  audiences.yaml  domains.yaml  integrations.yaml  risk-tiers.yaml
docs/: audit-drift-report.md
docs/adoption/: README.md  intent-cookbook.md  migration-when-skill-renames.md  override-guide.md  plan-apply-cycle.md
docs/rfcs/: README.md  RFC-MAG-0001-adoption-models.md  RFC-MAG-0002-model-c-structural-impact.md
docs/setup/: README.md
projects/_example-airflow/: .apache-steward.intent.yaml  README.md
projects/_template/: README.md
reconciler/: README.md  __init__.py  __main__.py  apply.py  build_registry.py  pyproject.toml  resolve.py  validate_manifests.py  validate_taxonomy.py
reconciler/migrations/: README.md
reconciler/schemas/: README.md  intent.schema.json  lock.schema.json  skill-manifest.schema.json
reconciler/src/reconciler/: __main__.py  plan.py
reconciler/tests/: conftest.py  test_apply.py  test_plan.py  test_resolve.py
reconciler/tests/fixtures/: intent-minimal.yaml
registry/: README.md  skills-index.json
(+28 files in other folders)
