# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "magpie-reconciler"
version = "0.1.0"
description = "Magpie adoption reconciler: resolves an adopter intent.yaml into a concrete lock + materialised workspace."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
  # PyYAML's safe_dump output is part of the lock-checksum
  # surface. Pinning is intentional: a serialisation change
  # produces a different checksum without any adopter intent
  # change. Bumps are reviewed PRs, not silent.
  "pyyaml>=6.0.2,<7",
  "jsonschema>=4.23,<5",
  "jinja2>=3.1.4,<4",
]

[project.scripts]
magpie-reconciler = "reconciler.__main__:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/reconciler"]

[tool.hatch.build]
src = ["src", "tests"]
files = ["src", "tests"]

[tool.uv]
required-version = ">=0.11.8"
exclude-newer = "7 days"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]
